# DataBase

./: .gitignore  Analytic.sql  DDL.sql  append.sql  credit_payment.sql  data.sql  interest.sql  new_credit.sql  new_deposit.sql  pyproject.toml  transfer.sql  truncate.sql
src/: alembic.ini  db.py  main.py  models.py
src/analytics/: debt.py  kyc.py  mcc.py  overdue.py  profit.py
src/business/: credit_payment.py
src/migrations/: env.py
src/migrations/versions/: 005db521c8df_add_unique_cons.py  464ccdd0262a_init.py  627ff509632d_add_unique_cons.py  6d6df33869c2_init.py  d2587b07f8e6_init.py
