[project]
name = "all-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "KoIvRo",email = "korot4ev29@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "sqlacodegen (>=4.0.3,<5.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
